cmake_minimum_required(VERSION 2.8)
project( DisplayImage&Video )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
add_executable( DisplayVideo video.cpp )
add_executable( DisplayCamera camera.cpp )
add_executable( DisplayWebCamera webcam.cpp )
add_executable( DisplayWebCameraCanny webcanny.cpp )
add_executable( DisplayWebCameraCannyb webcannyb.cpp )
add_executable( DisplayTracker track.cpp )
add_executable( DisplayGrabCut grabcut.cpp )
add_executable( DisplaySkeleton skeleton.cpp )
add_executable( DisplaySkeletonIMG skeletonIMG.cpp )
add_executable( DisplayLineTrack lineTracker2.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( DisplayVideo ${OpenCV_LIBS} )
target_link_libraries( DisplayCamera ${OpenCV_LIBS} )
target_link_libraries( DisplayWebCamera ${OpenCV_LIBS} )
target_link_libraries( DisplayWebCameraCanny ${OpenCV_LIBS} )
target_link_libraries( DisplayWebCameraCannyb ${OpenCV_LIBS} )
target_link_libraries( DisplayTracker ${OpenCV_LIBS} )
target_link_libraries( DisplayGrabCut ${OpenCV_LIBS} )
target_link_libraries( DisplaySkeleton ${OpenCV_LIBS} )
target_link_libraries( DisplaySkeletonIMG ${OpenCV_LIBS} )
target_link_libraries( DisplayLineTrack ${OpenCV_LIBS} )
